<resources>
    <string name="app_name">Covid19TrackingApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error">Error!</string>
    <string name="totalTest">total test : </string>
    <string name="totalDeath">total death :</string>
    <string name="critical">critical ill : </string>
    <string name="newDeath">number of new death :</string>
    <string name="activeCase">active Case : </string>
    <string name="recovered">recovered : </string>
    <string name="welcomeApp">Covid 19 data analysis</string>
    <string name="loginMainScreen">Examine</string>
    <string name="newCases">number of new cases : </string>
    <string name="confirmedTests">Confirmed tests : </string>
    <string name="toHistory">Confirmed tests : </string>
    <string name="popTest">Ratio of 1 m people (test) :</string>
    <string name="popCase">Ratio of 1 m people (case) :</string>
    <string name="population">Population :</string>
    <string name="popDeath">Ratio of 1 m people (death) :</string>
    <string name="time">Ratio of 1 m people (death) :</string>
    <string name="chooselanguage">Choose Language</string>
    <string name="statisticsdata">Statistics Data</string>


</resources>