<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <ImageView
            android:id="@+id/toDetailScreen"
            android:layout_width="54dp"
            android:layout_height="40dp"
            app:layout_constraintEnd_toStartOf="@+id/countryName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="?attr/homeAsUpIndicator" />

        <TextView
            android:id="@+id/countryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="TURKIYE"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></TextView>

        <TextView
            android:id="@+id/continentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="ASYA"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="537dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">


            <TextView
                android:id="@+id/testTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/totalTest"
                android:textSize="15sp">

            </TextView>

            <TextView
                android:id="@+id/popTest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/popTest"
                android:textSize="15sp">

            </TextView>

            <TextView
                android:id="@+id/newCase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/newCases"
                android:textSize="15sp">

            </TextView>

            <TextView
                android:id="@+id/casePop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/popCase"
                android:textSize="15sp">

            </TextView>

            <TextView
                android:id="@+id/activeCase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/activeCase"
                android:textSize="15sp"></TextView>

            <TextView
                android:id="@+id/critical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/critical"
                android:textSize="15sp"></TextView>

            <TextView
                android:id="@+id/population"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="population"
                android:textSize="15sp"></TextView>

            <TextView
                android:id="@+id/recovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/recovered"
                android:textSize="15sp"></TextView>

            <TextView
                android:id="@+id/newDeath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/newDeath"
                android:textSize="15sp">

            </TextView>

            <TextView
                android:id="@+id/popDeath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="popDeath"
                android:textSize="15sp"></TextView>

            <TextView
                android:id="@+id/totalDeath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/totalDeath"
                android:textSize="15sp"></TextView>

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/time"
                android:textSize="15sp"></TextView>

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>