<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="250dp">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:foregroundGravity="center"
        android:text=""
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>


    <TextView
        android:id="@+id/newCases"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="144dp"
        android:text="@string/newCases"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"></TextView>

    <TextView
        android:id="@+id/confirmedTests"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_marginBottom="20dp"
        android:text="@string/confirmedTests"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/death"
        app:layout_constraintTop_toBottomOf="@+id/newCases"
        app:layout_constraintVertical_bias="0.774"
        tools:layout_editor_absoluteX="4dp"></TextView>

    <TextView
        android:id="@+id/death"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="84dp"
        android:text="@string/newDeath"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newCases"></TextView>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="70dp"
        android:layout_height="46dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toStartOf="@+id/name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/world" />


</androidx.constraintlayout.widget.ConstraintLayout>